--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
             <h2 class=" primary-color">經典系列鏡框</h2>
             <ul class="product-content container">
                 <li>
-                    <img src="/img/product-1.png" alt="">
+                    <img src="img/product-1.png" alt="">
                     <div class="product-name">
-                        <img src="/img/icon-diamond.svg" alt="" class="icon">
+                        <img src="img/icon-diamond.svg" alt="" class="icon">
                         <h4 class="h2 sub-color">optical</h4>
                     </div>
                 </li>
                 <li>
-                    <img src="/img/product-2.png" alt="">
+                    <img src="img/product-2.png" alt="">
                     <div class="product-name">
-                        <img src="/img/icon-sun.svg" alt="" class="icon">
+                        <img src="img/icon-sun.svg" alt="" class="icon">
                         <h4 class="h2 sub-color">sunglasses</h4>
                     </div>
                 </li>
                 <li>
-                    <img src="/img/product-3.png" alt="">
+                    <img src="img/product-3.png" alt="">
                     <div class="product-name">
-                        <img src="/img/icon-thunder.svg" alt="" class="icon">
+                        <img src="img/icon-thunder.svg" alt="" class="icon">
                         <h4 class="h2 sub-color">functional</h4>
                     </div>
                 </li>
@@ -161,30 +161,30 @@
                     </ul>
                     <ul class="footer-commun">
                         <li>
-                            <a href="#"><img src="/img/icon-fb.svg" alt="fb"></a>    
+                            <a href="#"><img src="img/icon-fb.svg" alt="fb"></a>    
                         </li>
                         <li>
-                            <a href="#"><img src="/img/icon-ig.svg" alt="ig"></a>
+                            <a href="#"><img src="img/icon-ig.svg" alt="ig"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="/img/icon-line.svg" alt="line"></a>
+                            <a href="#"><img src="img/icon-line.svg" alt="line"></a>
                         </li>
                     </ul>
                 </div>
                 <div class="footer-connection">
                    <div class="tel">
-                       <img src="/img/icon-phone.svg" alt="">
+                       <img src="img/icon-phone.svg" alt="">
                        <a href="tel:0800-000-000">0800-000-000</a>
                    </div>
                    <div class="mail">
-                      <img src="/img/icon-mail.svg" alt="">
+                      <img src="img/icon-mail.svg" alt="">
                       <a href="mail-to:glasses@business.com">glasses@business.com</a>
                    </div>
                 </div>
                 <hr>
                 <div class="footer-company">
                     <div class="company-info">
-                        <img src="/img/logo.png" alt="logo">
+                        <img src="img/logo.png" alt="logo">
                         <p>Copyright © 2020 Glasses.All rights reserved.</p>
                     </div>
                     <ul>
