--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                <h2 class="h2 primary-color">顧客推薦</h2>
                <ul class="recommend-content">
                    <li>
-                       <img src="/img/rec-1.png" alt="">
+                       <img src="img/rec-1.png" alt="">
                        <div class="recommend-info">
                             <h4>Jessy</h4>
                             <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -103,7 +103,7 @@
                        </div>
                    </li>
                    <li>
-                       <img src="/img/rec-2.png" alt="">
+                       <img src="img/rec-2.png" alt="">
                        <div class="recommend-info">
                             <h4>Karen</h4>
                             <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -111,7 +111,7 @@
                         </div>
                    </li>
                    <li>
-                       <img src="/img/rec-3.png" alt="">
+                       <img src="img/rec-3.png" alt="">
                        <div class="recommend-info">
                             <h4>Chelsea</h4>
                             <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -119,7 +119,7 @@
                         </div>
                    </li>
                    <li>
-                       <img src="/img/rec-4.png" alt="">
+                       <img src="img/rec-4.png" alt="">
                        <div class="recommend-info">
                             <h4>Jane</h4>
                             <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
